item-detail: put on a route, present correct data, some functions for clicking

--- a/Views/Layouts/item-detail-layout.hbs
+++ b/Views/Layouts/item-detail-layout.hbs
@@ -20,5 +20,6 @@
 		<script>
 			document.title = document.querySelector(".item-name").innerHTML;
 		</script>
+		<script src="../resources/js/ItemDetail.js"></script>
 	</body>
 </html>
