--- a/Views/Layouts/default-layout.hbs
+++ b/Views/Layouts/default-layout.hbs
@@ -3,17 +3,17 @@
 	<head>
 		<title>USG</title>
 
-		{{>head }}
+		{{>head-part }}
 
 		<link rel="stylesheet" href="./resources/css/index.css" />
 	</head>
 
 	<body>
-		{{> header}}
+		{{> header-part}}
 
 		{{{body}}}
 
-		{{>footer}}
+		{{>footer-part}}
 
 		{{>bootstrap-script}}
 	</body>
