Rename partial layouts

--- a/Views/Layouts/item-detail-layout.hbs
+++ b/Views/Layouts/item-detail-layout.hbs
@@ -3,19 +3,19 @@
 	<head>
 		<title>USG</title>
 
-		{{> head}}
+		{{>head-part}}
 
 		<link rel="stylesheet" href="../resources/css/item-detail.css" />
 	</head>
 
 	<body>
-		{{>header}}
+		{{>header-part}}
 
 		{{{body}}}
 
-		{{>footer}}
+		{{>footer-part}}
 
-		{{> bootstrap-script}}
+		{{>bootstrap-part}}
 
 		<script>
 			document.title = document.querySelector(".item-name").innerHTML;
