--- a/Views/Layouts/forgot-pwd-layout.hbs
+++ b/Views/Layouts/forgot-pwd-layout.hbs
@@ -1,22 +1,20 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+	<head>
+		<title>USG</title>
 
-<head>
-    <title>USG</title>
+		{{> head-part}}
 
-    {{> head}}
+		<link rel="stylesheet" href="./resources/css/forgot-pwd.css" />
+	</head>
 
-    <link rel="stylesheet" href="./resources/css/forgot-pwd.css">
-</head>
+	<body>
+		{{> header-part}}
 
-<body>
-    {{> header}}
+		{{{body}}}
 
-    {{{body}}}
+		{{>footer-part}}
 
-    {{>footer}}
-
-    {{>bootstrap-script}}
-</body>
-
+		{{>bootstrap-part}}
+	</body>
 </html>
