--- a/Views/Layouts/shopping-cart-layout.hbs
+++ b/Views/Layouts/shopping-cart-layout.hbs
@@ -5,16 +5,7 @@
   <title>Shopping Cart</title>
   <link rel="shortcut icon" href="resources/img/web.ico" type="image/x-icon">
 
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Universal Simplistic Grocery">
-
-  <!-- Icons-->
-  <script src="https://kit.fontawesome.com/8d195968ab.js"></script>
-
-	<!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  {{>head-part }}
 
   <!-- Style CSS -->
   <link rel="stylesheet" href="../resources/css/styles.css">
@@ -23,11 +14,8 @@
 </head>
 
 <body>
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
-
+    {{> header-part}}
+    
     <div class="body-content container-fluid">
         <div class="row">
             <div class="col-md-7 col-12" id="formWrapper">
@@ -103,7 +91,9 @@
             </div>
         </div>
     </div>
-    
+    {{>footer-part}}
+
+    {{>bootstrap-part}}
 
 </body>
 </html>
