--- a/views/partials/header-part.hbs
+++ b/views/partials/header-part.hbs
@@ -196,7 +196,7 @@
 						</div>
 					</li>
 					<li class="nav-link" style="--i: 1s">
-						<a href="/thong-tin">THÔNG TIN</a>
+						<a href="/infor">THÔNG TIN</a>
 					</li>
 				</ul>
 			</div>
