--- a/views/partials/header-part.hbs
+++ b/views/partials/header-part.hbs
@@ -32,11 +32,12 @@
 	<div class="nav-bar-menu container" id="nav-bar-menu">
 		<div class="logo-brand">
 			<a href="/index.htm" class="h-100 d-flex align-items-center">
-				<img
-					src="resources/img/logo/fit-logo.png"
+				<!-- <img
+					class="nav-bar-logo"
+					src="./resources/img/logo/fit-logo.png"
 					alt=""
 					style="height: 2.5; width: 2.5rem"
-				/>
+				/> -->
 				<h3>USG</h3>
 			</a>
 		</div>
