--- a/Views/shopping-cart.hbs
+++ b/Views/shopping-cart.hbs
@@ -1,34 +1,29 @@
-{{!-- billItems: BillItem[] --}}
-
+{{#with bill}}
 <div class="chosen-item-div">
 	{{#each billItems}}
 	{{#with item}}
-	<div class="item-div row p-2 m-2">
+	<div class="item-div row p-3 m-2" id="{{ id }}">
 		<div class="col-md-6 col-sm-12">
-			{{#each imagePath}}
-                {{#unless @index}}
-                <img class="w-100" src="{{this}}" />
-                {{/unless}}
-			{{/each}}
+			<img class="w-100" src="{{ imageThumbnail }}" />
 		</div>
 
 		<div class="col-md-6 col-sm-12">
 			<div class="w-100">
-				<div class="item-name text-md-right text-center">{{name}}</div>
+				<div class="item-name text-md-right text-center">{{ name }}</div>
 			</div>
 
 			<div class="d-flex flex-md-column justify-content-between">
 				<div class="d-flex justify-content-end">
-					<div class="price">{{price}}</div>
+					<div class="price">{{ price }}</div>
 					đ
 				</div>
-    {{/with}}
+				{{/with}}
 				<div class="d-flex justify-content-end mt-1">
-					<div class="decrease-one">-</div>
+					<div class="decrease-one unselectable">-</div>
 					<div>
-						<input class="amount" type="text" value="{{amount}}" />
+						<input class="amount" type="text" value="{{ amount }}" />
 					</div>
-					<div class="increase-one">+</div>
+					<div class="increase-one unselectable">+</div>
 				</div>
 			</div>
 		</div>
@@ -36,3 +31,12 @@
 
 	{{/each}}
 </div>
+
+<div class="d-flex justify-content-between mt-2">
+	<div class="form-tittle">TOTAL:</div>
+	<div class="d-flex">
+		<div class="total-price">{{ totalPrice }}</div>
+		đ
+	</div>
+</div>
+{{/with}}
