--- a/views/layouts/product-item-layout.hbs
+++ b/views/layouts/product-item-layout.hbs
@@ -20,6 +20,9 @@
 		<script>
 			document.title = document.querySelector(".item-name").innerHTML;
 		</script>
-		<script src="../resources/js/ItemDetail.js"></script>
+		<script
+			src="../resources/js/ItemDetail.js"
+			crossorigin="anonymous"
+		></script>
 	</body>
 </html>
