--- a/views/partials/header-part.hbs
+++ b/views/partials/header-part.hbs
@@ -251,7 +251,13 @@
 					</svg>
 				</a>
 
-				<a name="" id="cart-btn" class="btn rounded-0" href="#" role="button">
+				<a
+					name=""
+					id="cart-btn"
+					class="btn rounded-0"
+					href="/shopping-cart"
+					role="button"
+				>
 					<!-- <i class="fas fa-shopping-bag text-white"></i> -->
 					<svg
 						width="1.8rem"
