--- a/resources/css/shopping-cart.css
+++ b/resources/css/shopping-cart.css
@@ -1,9 +1,10 @@
 :root {
 	--darkYellow: #ffe4aa;
-	--softOrage: #e8c6b1;
+	--softOrage: #f26101;
 	--lightTomato: #ff8f89;
 	--sharpPink: #e894e8;
 	--deepViolet: #bd97ff;
+	--darkBlue: #283657;
 }
 
 @font-face {
@@ -126,13 +127,13 @@ textarea {
 	font-size: 1rem;
 
 	border-style: solid;
-	border-color: var(--lightTomato);
+	border-color: var(--softOrage);
 	border-width: 1px;
 }
 
 .decrease-one:hover,
 .increase-one:hover {
-	background-color: var(--lightTomato);
+	background-color: var(--softOrage);
 	cursor: pointer;
 }
 
