--- a/views/layouts/shop-cart-layout.hbs
+++ b/views/layouts/shop-cart-layout.hbs
@@ -46,17 +46,22 @@
                                 </div>
                                 <div class="d-flex justify-content-center align-items-center">
                                     <div class="option w-100 mx-1
-                                    d-flex justify-content-center align-items-center">ON</br>SITE</div>
+                                    d-flex justify-content-center align-items-center unselectable"
+                                    >ON</br>SITE</div>
                                     <div class="option w-100 mx-1
-                                    d-flex justify-content-center align-items-center"> CREDIT </br> CARD </div>
+                                    d-flex justify-content-center align-items-center unselectable"
+                                    > CREDIT </br> CARD </div>
                                     <div class="option w-100 mx-1 
-                                    d-flex justify-content-center align-items-center">
+                                    d-flex justify-content-center align-items-center unselectable"
+                                    >
                                         VISA
                                     </div>
                                     <div class="option w-100 mx-1
-                                    d-flex justify-content-center align-items-center"> MOMO </div>
+                                    d-flex justify-content-center align-items-center unselectable"
+                                    > MOMO </div>
                                     <div class="option w-100 mx-1
-                                    d-flex justify-content-center align-items-center"> KIDNEY </div>
+                                    d-flex justify-content-center align-items-center unselectable"
+                                    > KIDNEY </div>
                                 </div>
                             </div>
 
@@ -88,8 +93,8 @@
     {{>footer-part}}
 
     {{>bootstrap-part}}
+
     <script src="../resources/js/ShoppingCart.js"
-			type="module"
-			crossorigin="anonymous"></script>
+			type="module"></script>
 </body>
 </html>
