Add 2 tsconfig & fix functions on product-item
- tsconfig.dom: Transpiling JS for browser (ES6)
- tsconfig.nodejs: Transpiling JS for NodeJs server (CommonJS)

--- a/views/layouts/product-item-layout.hbs
+++ b/views/layouts/product-item-layout.hbs
@@ -20,9 +20,6 @@
 		<script>
 			document.title = document.querySelector(".item-name").innerHTML;
 		</script>
-		<script
-			src="../resources/js/ItemDetail.js"
-			crossorigin="anonymous"
-		></script>
+		<script src="../resources/js/ItemDetail.js" type="module"></script>
 	</body>
 </html>
